--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -35,83 +35,69 @@
 
   <body>
     <!-- Headbar -->
-    <header class="">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-          <!-- Toggler del navbar -->
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerMain"
-            aria-controls="navbarTogglerMain" aria-expanded="false" aria-label="Navegación">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <!-- Marca de la página -->
-          <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="../index.html">
-            <img src="../img/logo.png" class="logo" alt="" />
-            <span
-              class="sr-only">(actual)</span></a>
-          <!-- Los items del Navbar -->
-          <div class="collapse navbar-collapse" id="navbarTogglerMain">
-            <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="mujeres.html">Mujeres</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="hombre.html">Hombres</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="ninos.html">Niños</a>
-              </li>
-              <!-- Botón del usuario 1 -->
-              <li class="nav-item d-lg-none">
-                  <a class="nav-link" href="registroUsuario.html">
-                      <i class="fas fa-user"></i> Usuario
-                  </a>
-              </li>
-              <!-- Botón del carro de compras 1 -->
-              <li class="nav-item dropdown d-lg-none">
-                  <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                      aria-expanded="false">
-                      <i class="fas fa-shopping-cart"></i> Carro de compra
-                  </a>
-                  <div class="dropdown-menu dropdown-menu-right">
-                    <a class="dropdown-item" href="producto.html">Producto 1</a>
-                    <a class="dropdown-item" href="producto.html">Producto 2</a>
-                    <a class="dropdown-item" href="producto.html">Producto 3</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="carro.html">Ver carro</a>
-                  </div>
-              </li>
-            </ul>
-            <!--Barra de busqueda -->
-            <form class="form-inline my-0 mr-0 nav-item">
-              <input class="form-control mr-0 text_area" type="search" placeholder="Buscar" aria-label="Buscar" />
-              <button class="btn btn-outline-success my-1 my-md-0" type="submit">
-                <i class="fas fa-search"></i>
-              </button>
-            </form>
-            <!-- Botón de Usuario -->
-            <div class="btn-group dropdown ml-2 d-none d-lg-block">
-                <a class="btn btn-info" href="login.html">
-                    <i class="fas fa-user"></i>
-                </a>
-            </div>
-            <!-- Botón del carro de compras 2-->
-            <div class="btn-group dropdown ml-2 d-none d-lg-block">
-                <a class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-                    <i class="fas fa-shopping-cart"></i>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right">
-                    <a class="dropdown-item" href="producto.html">Producto 1</a>
-                    <a class="dropdown-item" href="producto.html">Producto 2</a>
-                    <a class="dropdown-item" href="producto.html">Producto 3</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="carro.html">Ver carro</a>
-                </div>
-            </div>
-          </div>
-        </nav>
-      </header>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <!-- Toggler del navbar -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarTogglerMain"
+          aria-controls="navbarTogglerMain"
+          aria-expanded="false"
+          aria-label="Navegación"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Marca de la página -->
+        <a
+          class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2"
+          href="../index.html"
+          >ChangeWear</a
+        >
+        <!-- Los items del Navbar -->
+        <div class="collapse navbar-collapse" id="navbarTogglerMain">
+          <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="mujeres.html">Mujeres</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="hombre.html">Hombres</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="ninos.html">Niños</a>
+            </li>
+          </ul>
+          <!--Barra de busqueda -->
+          <form class="form-inline my-0 mr-2 nav-item">
+            <input
+              class="form-control mr-0 text_area"
+              type="search"
+              placeholder="Buscar"
+              aria-label="Buscar"
+            />
+            <button class="btn btn-outline-success my-0" type="submit">
+              <i class="fas fa-search"></i>
+            </button>
+          </form>
+          <!--Botón de iniciar sesión-->
+          <ul class="navbar-nav mt-1 mt-lg-0">
+            <li class="nav-item my-sm-1 mx-lg-2">
+              <a class="btn btn-info" href="login.html">
+                <i class="fas fa-user"></i>
+              </a>
+            </li>
+            <li class="nav-item my-sm-1 mx-lg-2">
+              <a class="btn btn-danger" href="carro.html">
+                <i class="fas fa-shopping-cart"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
     <br />
-    <div class="contacto-form ">
+    <div class="contacto-form">
       <div class="formulario my-sm-1 ml-md-1 border rounded">
         <h1>¡Contáctanos!</h1>
         <p>Escríbenos y responderemos a la brevedad.</p>
@@ -156,63 +142,58 @@
       </div>
     </div>
 
-   
-   <!-- Aquí va el footer -->
-   <footer class="bg-dark text-white my-0 mx-0 pt-4 pb-2 main-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md" style="text-align: center">
-          <img src="../img/logo.png" class="logo pb-4" alt="" />
+    <!--Footer -->
+    <footer class="bg-dark text-white my-0 mx-0 pt-4 pb-2 main-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md">
+            <img src="../img/logo.png" class="logo" alt="" />
+          </div>
+          <div class="col-md">
+            <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
+            <ul class="mb-0 pb-2">
+              <li class="text">
+                <a class="nav-link" href="vision.html">Nuestra Visión</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Noticias</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Empleo</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md">
+            <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
+            <ul class="mb-0 pb-2">
+              <li class="text">
+                <a class="nav-link" href="#">Pedidos</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Cambios y devoluciones</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Formas de pago</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Contáctanos</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="col-md">
-          <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
-          <ul class="mb-0 pb-2 foot-list">
-            <li class="">
-              <a class="" href="vision.html">Nuestra Visión</a>
-            </li>
-            <li class="">
-              <a class="" href="#">Noticias</a>
-            </li>
-            <li class="">
-              <a class="" href="#">Empleo</a>
-            </li>
-          </ul>
-        </div>
-        <div class="col-md">
-          <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
-          <ul class="mb-0 pb-2 foot-list">
-            <li class="">
-              <a class="" href="#">Pedidos</a>
-            </li>
-            <li class="">
-              <a class="" href="#">Cambios y devoluciones</a>
-            </li>
-            <li class="">
-              <a class="" href="#">Formas de pago</a>
-            </li>
-            <li class="">
-              <a class="" href="contacto.html">Contáctanos</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <hr class="footer-hr my-2 py-0" />
-      <div class="row">
-        <div class="col-4 text-left">
-          <i class="fab fa-twitter mx-1 text-info"></i>
-          <i class="fab fa-facebook-f mx-1 text-info"></i>
-          <i class="fab fa-instagram mx-1 text-info"></i>
-          <i class="fab fa-whatsapp mx-1 text-info"></i>
-        </div>
-        <div class="col-8 text-right copyright font-weight-light">
-          
-          <div>
+        <hr class="footer-hr my-2 py-0" />
+        <div class="row">
+          <div class="col-4 text-left">
+            <i class="fab fa-twitter mx-1 text-info"></i>
+            <i class="fab fa-facebook-f mx-1 text-info"></i>
+            <i class="fab fa-instagram mx-1 text-info"></i>
+          </div>
+          <div class="col-8 text-right copyright">
             Todos los derechos reservados.
           </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
